--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
     <h1 align="center">Sorting Algorithm</h1>
 
-    <nav>
+    <nav id="nav_bar">
         <div class="row">
             <div class="col gap-2 d-sm-flex" id="new_Array">
                 <button type="button" class="btn btn-outline-success btn-dark newArray">Generate Array</button>
@@ -45,7 +45,7 @@
     </header>
 
 
-<body class="p-3 mb-3 bg-dark text-white">
+<body class="p-3 mb-3 text-white">
 
     <div id="bars" class="flex-container"></div>
 
@@ -55,6 +55,8 @@
     <script src="js files/insertionsort.js"></script>
     <script src='js files/selectionsort.js'></script>
     <script src='js files/mergesort.js'></script>
+    <script src='js files/quicksort.js'></script>
+    <script src='js files/heapsort.js'></script>
     
 </body>
 </html>
